# lite-gateway

./: .dockerignore  .gitignore  README.md  docker-compose.yarp.yml  docker-compose.yml
.github/workflows/: benchmark.yml  docker-publish.yml  release-yarp.yml
archive/: README.md
archive/docs/: JMX_PARITY_PLAN.md  architecture.drawio
archive/scripts/: run-docker-matrix.sh
archive/specs/: ABSTRACT_SPEC.md
archive/src/LiteGateway.LoadClient/: LiteGateway.LoadClient.csproj  Program.cs
archive/src/LiteGateway.Proxy/: Dockerfile  appsettings.json
archive/src/LiteGateway.Proxy.Rust/: Dockerfile
archive/src/LiteGateway.Proxy/Properties/: launchSettings.json
config/: README.md  yarp.json
docs/: CORRECTNESS_RESULT_REPORT.md  benchmarks.md  load-client-sequence.md  yarp-proxy-windows.md  yarp-proxy.md
scripts/: build-yarp-windows-aot.ps1  build-yarp-windows-aot.sh  generate-mtls-certs.sh  run-everything.sh  run-jmeter-testplan.sh
specs/: ABSTRACT_SPEC.md  Cloud Lite  Gateway_ Performance.txt  Lite Gateway Requirement.txt
specs/jmeter/: TestPlan.jmx
src/LiteGateway.LoadClient/: Program.cs
src/LiteGateway.Proxy/: LiteGateway.Proxy.csproj  Program.cs  appsettings.Development.json
src/LiteGateway.Proxy.Rust/: Cargo.toml
src/LiteGateway.Proxy.Rust/src/: main.rs
src/LiteGateway.YarpProxy/: Dockerfile  LiteGateway.YarpProxy.csproj  Program.cs  appsettings.Development.json  appsettings.json  entrypoint.sh
src/LiteGateway.YarpProxy/Properties/: launchSettings.json
