[package]
name = "lite-gateway-proxy-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.11", features = ["server", "http1", "http2", "tokio"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "http2"] }
rustls = { version = "0.23.26", features = ["ring"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
